  (mrosoiu)

- Introduce ${xp.compile.forceOverwrite} to speed up compile phase - see pull request #7
  (kiesel)

- Do not rely on "svn" command output as it might be localized in other language than en_US
- Rename "config" directory to "conf" in generated artifact for "app" packing strategy
  (mrosoiu, thomas)


Version 3.2.9, released 2013-01-08
----------------------------------
- Bugfix: Use java-implemented chmod in AbstractUnarchiver to avoid bug on linux for filenames with special characters
- Refactor TestMojo and IntegrationTestMojo to use the common AbstractTestMojo
- Add ${xp.test.singleInstance} and ${xp.it.singleInstance} to fix Issue #6; default is "false" so a new unittest
  runner instance is spawned for every *.ini file found
- If PHP reports an invalid [extension_dir] value, try to use [ext] in php.exe directory. See Issue #5.
  (mrosoiu)


Version 3.2.8, released 2013-01-04
----------------------------------
- Bugfix: Select the correct artifact handler based of the artifact format (xar or zip)
  (mrosoiu)


Version 3.2.7, released 2013-01-04
----------------------------------
- Include "strategy" entry in on-the-fly generated "manifest.ini" during the "package" phase
- Relocate "xp:ignite" downloaded deps to "/lib/ignite" to avoid conflicts with other possible existing libs
- Add vendor libraries to classpath when running tests
- Include vendor libraries in generated artifact for "app" packing strategy
- Add ${xp.package.packVendorLibs} to skip packing vendor libs
  (mrosoiu)


Version 3.2.6, released 2012-12-10
----------------------------------
- Bugfix: When packing apps, add "lib/bootstrap" entry to the on-the-fly generated "project.pth"
  (mrosoiu)


Version 3.2.5, released 2012-12-10
----------------------------------
- Add ${xp.svn-deploy.legacyVolatileTagName} property to alter the value of ${xp.svn-deploy.volatileTagName}
- Rename "svn-deploy" goal's properties to ${xp.svn-deploy.xxx}